src/objects/Historical_Non_Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historical Non Deliveries</relationshipLabel>
        <relationshipName>Historical_Non_Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <label>Cancelled?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Date__c</fullName>
        <label>Complaint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Delivery_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Non-Delivery Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_Start_Date__c</fullName>
        <label>POP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <displayFormat>HND-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Total_Credit__c</fullName>
        <label>Request Total Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Total_Issue__c</fullName>
        <label>Request Total Issue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restart_Date__c</fullName>
        <label>Restart Date</label>
        <type>Date</type>
    </fields>
    <label>Historical Non Delivery</label>
    <nameField>
        <label>Historical Non Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Non Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>